force-app/main/default/objects/Account/fields/Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Value__c</fullName>
    <description>Total amount of orders/Business done with the Account, consider only New, Shipped &amp; Delivered orders.</description>
    <inlineHelpText>Total Business done with the Account for New, Shipped &amp; Delivered orders.</inlineHelpText>
    <label>Lifetime Value</label>
    <summarizedField>Order_Detail__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Order_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>New, Shipped, Delivered</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Detail__c.Employer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>