force-app/main/default/objects/Account/fields/Multiple_Payments_Failed__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Payments_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if there are multiple payments failed for am account.</description>
    <label>Multiple Payments Failed</label>
    <type>Checkbox</type>
</CustomField>