force-app/main/default/objects/Account/fields/NumberOfFailedPayments__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFailedPayments__c</fullName>
    <description>Total failed payments on an account</description>
    <inlineHelpText>Auto calculated based on total number of failure payments attempts in Payment for an account</inlineHelpText>
    <label>NumberOfFailedPayments</label>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>failure</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Employer1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>