force-app/main/default/objects/Account/fields/Total_Cancelled_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancelled_Orders__c</fullName>
    <description>Show the number of Order Cancelled by an Account</description>
    <inlineHelpText>number of Order Cancelled by an Account</inlineHelpText>
    <label>Total Cancelled Orders</label>
    <summaryFilterItems>
        <field>Order_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Detail__c.Employer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>