force-app/main/default/objects/Account/fields/Total_orders__c.field-meta.xml
<CustomField>
    <fullName>Total_orders__c</fullName>
    <description>Total orders placed by an employer</description>
    <inlineHelpText>Total orders placed by an employer</inlineHelpText>
    <label>Total orders</label>
    <summaryForeignKey>Order_Detail__c.Employer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>