force-app/main/default/objects/Account/fields/Total_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Due__c</fullName>
    <label>Total Payment Due</label>
    <summarizedField>Invoice__c.Balance_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Employer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>